Fix Sonarqube issues